# picman

./: .gitignore  AUTHORS  ChangeLog.pre-1-0  ChangeLog.pre-1-2  ChangeLog.pre-2-0  ChangeLog.pre-2-2  ChangeLog.pre-2-4  ChangeLog.pre-2-6  ChangeLog.pre-git  HACKING  INSTALL  LICENSE  MAINTAINERS  Makefile.am  NEWS  NEWS.pre-2-0  NEWS.pre-2-2  NEWS.pre-2-4  NEWS.pre-2-6  README  README.i18n  authors.dtd  authors.xml  authors.xsl  config.h.win32  configure.ac  gimp-zip.in  gimp.doap  gimpthumb.pc.in  gimpui.pc.in  picman.pc.in
app/: .gitignore  Makefile.am  about.h  app.c  app.h  batch.c  batch.h  errors.c  errors.h  gimp-debug.c  gimp-debug.h  gimp-log.c  gimpcore.def  language.c  language.h  main.c  picman-intl.h  picman-log.h  sanity.c  sanity.h  signals.c  signals.h  tests.c  tests.h  unique.c  unique.h  units.c  units.h  version.c  version.h
app/actions/: Makefile.am  actions-types.h  actions.c  actions.h  brush-editor-actions.c  brush-editor-actions.h  brushes-actions.c  brushes-actions.h  buffers-actions.c  buffers-actions.h  buffers-commands.c  buffers-commands.h  channels-actions.c  channels-actions.h  channels-commands.c  channels-commands.h  colormap-actions.c  colormap-actions.h  colormap-commands.c  colormap-commands.h  context-actions.c  context-actions.h  context-commands.c  context-commands.h  cursor-info-actions.c  cursor-info-actions.h  cursor-info-commands.c  cursor-info-commands.h  data-commands.c  data-commands.h  data-editor-commands.c  data-editor-commands.h  debug-actions.c  debug-actions.h  debug-commands.c  debug-commands.h  dialogs-actions.c  dialogs-actions.h  dialogs-commands.c  dialogs-commands.h  (+130 more)
app/config/: Makefile.am  config-enums.c  config-enums.h  config-types.h  gimpconfig-file.c  gimpconfig-file.h  gimpdisplayconfig.c  gimpdisplayoptions.c  gimpgeglconfig.h  gimpguiconfig.h  gimprc-blurbs.h  gimprc-deserialize.c  gimprc-unknown.c  gimprc.c  picmanconfig-dump.c  picmanconfig-dump.h  picmanconfig-utils.c  picmanconfig-utils.h  picmancoreconfig.c  picmancoreconfig.h  picmandisplayconfig.h  picmandisplayoptions.h  picmangeglconfig.c  picmanguiconfig.c  picmanpluginconfig.c  picmanpluginconfig.h  picmanrc-deserialize.h  picmanrc-serialize.c  picmanrc-serialize.h  picmanrc-unknown.h  picmanrc.h  picmanxmlparser.c  picmanxmlparser.h  test-config.c
app/core/: .gitignore  Makefile.am  core-enums.c  core-enums.h  core-types.h  gimp-cairo.c  gimp-edit.c  gimp-gradients.h  gimp-gui.c  gimp-modules.h  gimp-tags.c  gimp-templates.c  gimp-templates.h  gimp-transform-resize.h  gimp-units.c  (+342 more)
desktop/: .gitignore  Makefile.am  picman.desktop.in.in
docs/: .gitignore  Makefile.am  Wilber.xcf.gz.README  gimprc.5.in  gimptool.1.in  picman.1.in
libgimpconfig/: Makefile.am  gimpcolorconfig-enums.c  gimpcolorconfig.c  gimpcolorconfig.h  gimpconfig-deserialize.h  gimpconfig-path.c  gimpconfig-path.h  gimpconfig.h  gimpconfigtypes.h  gimpconfigwriter.c  gimpscanner.c
libpicman/: .gitignore  Makefile.am  libpicman-intl.h  picman.c  picman_pdb.c  picman_pdb.h  picmanbrush_pdb.h  picmanbrushes.h  picmanbrushselect.c  picmanbrushselect.h  picmanbrushselect_pdb.c  picmanbrushselect_pdb.h  picmanbrushselectbutton.c  picmanbuffer_pdb.c  picmanchannel.h  picmanchannel_pdb.h  picmancolor_pdb.c  picmancolor_pdb.h  picmancontext_pdb.h  picmanconvert_pdb.c  picmanconvert_pdb.h  picmandisplay_pdb.c  picmandrawable.c  picmandrawablepreview.c  picmandrawablepreview.h  picmandrawabletransform_pdb.h  picmandynamics_pdb.c  picmandynamics_pdb.h  picmanedit_pdb.c  picmanedit_pdb.h  picmanenums.c.tail  picmanenums.h  picmanexport.c  picmanexport.h  picmanfloatingsel_pdb.c  picmanfloatingsel_pdb.h  picmanfontmenu.c  picmanfontmenu.h  picmanfonts_pdb.c  picmanfonts_pdb.h  (+90 more)
libpicmanbase/: .gitignore  Makefile.am  picmanbase-private.c  picmanbase-private.h  picmanbase.def  picmanbase.h  picmanbasetypes.c  picmanbasetypes.h  picmanchecks.c  picmancpuaccel.h  picmandatafiles.c  picmandatafiles.h  picmanenv.h  picmanlimits.h  picmanmemsize.c  picmanmemsize.h  picmanparam.h  picmanparasite.c  picmanparasiteio.h  picmanprotocol.c  picmanprotocol.h  picmanrectangle.c  picmanrectangle.h  picmanreloc.c  picmanreloc.h  picmansignal.c  picmanunit.c  picmanutils.c  picmanutils.h  picmanwin32-io.h  picmanwire.c  picmanwire.h  test-cpu-accel.c
libpicmancolor/: Makefile.am  picmanadaptivesupersample.c  picmanadaptivesupersample.h  picmanbilinear.c  picmanbilinear.h  picmancairo.h  picmancmyk.c  picmancmyk.h  picmancolor.def  picmancolor.h  picmancolormanaged.c  picmancolormanaged.h  picmancolorspace.c  picmancolortypes.h  picmanhsl.c  picmanhsl.h  picmanhsv.c  picmanhsv.h  picmanpixbuf.c  picmanrgb.c
libpicmanmath/: Makefile.am  picmanmath.def  picmanmath.h  picmanmathtypes.h  picmanmatrix.c  picmanmatrix.h  picmanmd5.c  picmanmd5.h  picmanvector.c
libpicmanmodule/: Makefile.am  picmanmodule.def  picmanmodule.h  picmanmoduledb.h
libpicmanthumb/: .gitignore  Makefile.am  picmanthumb-error.c  picmanthumb-types.h  picmanthumb-utils.h  picmanthumb.def  picmanthumb.h  picmanthumbnail.c  picmanthumbnail.h
libpicmanwidgets/: .gitignore  Makefile.am  picman3migration.c  picman3migration.h  picmanbrowser.c  picmanbutton.c  picmanbutton.h  picmancairo-utils.h  picmancellrenderertoggle.c  picmancellrenderertoggle.h  picmanchainbutton.c  picmanchainbutton.h  picmancolorarea.c  picmancolorarea.h  picmancolorbutton.c  picmancolorbutton.h  picmancolordisplay.c  picmancolordisplaystack.c  picmancolordisplaystack.h  picmancolorhexentry.h  picmancolornotebook.c  picmancolorprofilecombobox.c  picmancolorprofilecombobox.h  picmancolorprofilestore.h  picmancolorscales.h  picmancolorselect.c  picmancolorselect.h  picmancolorselection.c  picmancolorselection.h  picmancolorselector.c  picmancontroller.c  picmancontroller.h  picmandialog.c  picmandialog.h  picmaneevl.c  picmaneevl.h  picmanenumlabel.h  picmanenumwidgets.c  picmanenumwidgets.h  picmanfileentry.h  (+38 more)
tools/: .gitignore  Makefile.am  defcheck.py  gimp-mkenums  gimppath2svg.py  kernelgen.c  module-dependencies.py  picmantool.c  test-clipboard.c
(+3200 files in other folders)
